# file_proxy

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/file_proxy/: Dockerfile  start.sh
src/file_proxy/: main.py  settings.py
src/file_proxy/clients/: proxy_client.py
src/file_proxy/controllers/: file_controller.py
src/file_proxy/core/: application.py  container.py  controller.py
src/file_proxy/serializers/: audio_serializers.py
