[tool.poetry]
name = "file_proxy"
version = "0.1.0"
description = "Proxy file service"
authors = ["Dmitry Rozhaev <dmitry.rozhaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
injector = "^0.18.4"
aiohttp = "^3.7.4"
fastapi-utils = "^0.2.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
gino = {extras = ["starlette"], version = "^1.0.1"}
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
